--- a/styles.css
+++ b/styles.css
@@ -118,6 +118,7 @@ nav li:first-child{
     font-size: 17px;
     border-radius: 10px;
     border: none;
+    color: var(--secondary-color);
     background-image: linear-gradient(to right, rgb(197,255,150,1),rgb(169,248,104,1));
 }
 .mainButton:hover{
@@ -196,6 +197,7 @@ h3{
     font-weight: 500;
     border-radius: 10px;
     border: none;
+    color: var(--secondary-color);
     background-image: linear-gradient(to right, rgb(197,255,150,1),rgb(169,248,104,1));
 }
 .secondButton:hover{
@@ -238,6 +240,7 @@ h2{
     font-weight: 500;
     border-radius: 10px;
     border: none;
+    color: var(--secondary-color);
     background-image: linear-gradient(to right, rgb(197,255,150,1),rgb(169,248,104,1)); 
 }
 .footerNav{
@@ -341,22 +344,22 @@ h2{
         width: 50%;
     }
     .exploreStudy{
-        width: 90%;
+        width: 100%;
         height: 110vh;
-        border-radius: 0%;
         display: block;
+        flex-direction: column-reverse;
+        justify-content: flex-end;
         text-align: center;
         border-radius: 40px;
         
     }
     .exploreImage{
-       position: absolute;
-       margin-top: 353px;
-       margin-left: 37px
+       width: 90%;
+       margin: auto;
     }
     .exploreRight{
-       position: absolute;
-        margin:38px 20px;
+        width: 80%;
+        margin: 10px auto;
     }
     h6{
         font-size: 17px;
@@ -397,11 +400,12 @@ h2{
     .footNav{
         display: flex;
         gap: 30px;
+        justify-content: center;
         margin-right: 60px;
     }
     .footerName{
         font-weight: 600;
-        margin-left: 55px;
+        margin-left: 50px;
         visibility: hidden;
     }
     .footerName:after{
@@ -482,11 +486,12 @@ h2{
     }
     .exploreStudy{
         width: 90%;
-        height: 125vh;
+        height: 90%;
         border-radius: 0%;
         display: block;
         text-align: center;
         border-radius: 40px;
+        padding: 10px 0;
         
     }
     .exploreImage{
@@ -507,7 +512,7 @@ h2{
     }
     .connectPage{
         width: 90%;
-        height: 100vh;
+        height: 90%;
         text-align: center;
         border-radius: 40px;
         margin: 120px auto;
