--- a/styles.css
+++ b/styles.css
@@ -363,6 +363,7 @@ h2{
         justify-content: flex-end;
         text-align: center;
         border-radius: 40px;
+
         
     }
     .exploreImage{
@@ -389,6 +390,7 @@ h2{
         border-radius: 40px;
         margin: 150px auto;
         margin-bottom: 40px;
+        padding: 10% ;
     }
     .connectLeft{
         width: 100%;
@@ -425,7 +427,7 @@ h2{
         visibility: visible;
         position: absolute;
         margin-top: -49px;
-        margin-left: -50px;
+        margin-left: -0px;
     }
     .footNav a{
         font-size: 14px;
