--- a/styles.css
+++ b/styles.css
@@ -566,3 +566,137 @@ h2{
         font-size: 14px;
     }
 }
+
+/*ProJect Style*/
+
+
+.projectBody{
+    width: 80%;
+    margin: 120px auto;
+    padding: 0 10px;
+    text-align: left;
+    }
+.projectHeading{
+    font-size: 3.3rem;
+    font-weight: 600;
+    line-height: 66px;
+    color: var(--secondary-color);
+    margin-bottom: 30px;
+}
+.projectUnderText{
+    font-size: 17px;
+    margin-left: 18px;
+    color: var(--secondary-color);
+}
+.featuredProjects{
+    font-size: 22px;
+    font-weight: 700;
+    margin: 70px 10%;
+    text-align: left;
+}
+.secondLine{
+    position: absolute;
+    margin: -21px 230px;
+    width: 65%;
+}
+.projectImages{
+    display: grid;
+    grid-template-columns: 500px 500px;
+    grid-template-rows: 1fr 1fr;
+    gap: 40px;
+    width: 10%;
+    margin: 40px 0;
+    padding: 0 20%;
+}
+.card:hover{
+    margin-top: -10px;
+}
+@media(max-width:480px){
+    .projectHeading{
+        display: block;
+        width: 100%;
+        font-size: 2.3rem;
+        font-weight: 600;
+        line-height: 50px;
+        text-align: center;
+    }
+    .projectUnderText{
+        text-align: center;
+    }
+    .featuredProjects{
+        display: block;
+        width: 100%;
+        margin: 0 auto;
+        text-align: center;
+    }
+    .secondLine{
+        display: none;
+    }
+    .projectImages{
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: 1fr 1fr;
+        gap: 10px;
+        margin-top: 40px;
+        margin-left: -43px;
+    }
+    .card{
+     width: 10%;
+     height: 10%px;
+    }
+    img{
+        border-radius: 10%;
+        width: 200px;
+        height: 200px;
+    }
+    #icon{
+        width: 22px;
+        height: 22px;
+    }
+}
+@media(min-width:481px) and (max-width:800px){
+    .projectHeading{
+        display: block;
+        width: 100%;
+        font-size: 2.8rem;
+        font-weight: 600;
+        line-height: 50px;
+        text-align: center;
+    }
+    .projectUnderText{
+        text-align: center;
+    }
+    .featuredProjects{
+        display: block;
+        width: 100%;
+        margin: 0 auto;
+        text-align: center;
+    }
+    .secondLine{
+        display: none;
+    }
+    .projectImages{
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: 1fr 1fr;
+        gap: 10px;
+        width: 10%;
+        margin: 50px;
+        margin-top: 40px;
+    
+    }
+    .card{
+     width: 10%;
+     height: 10%;
+     
+    }
+    img{
+        border-radius: 10%;
+        width: 200px;
+        height: 200px;
+    }
+    #icon{
+        width: 22px;
+        height: 22px;
+    }
+}
