--- a/styles.css
+++ b/styles.css
@@ -630,21 +630,24 @@ h2{
         text-align: center;
     }
     .secondLine{
-        display: none;
+        display: block;
+        width: 100%;
+        margin: 20px auto;
+        
     }
     .projectImages{
         display: grid;
         grid-template-columns: 1fr 1fr;
         grid-template-rows: 1fr 1fr;
         gap: 10px;
-        margin-top: 40px;
-        margin-left: -43px;
+        margin-top: 60px;
+        margin-left: -73px;
     }
     .card{
      width: 10%;
      height: 10%px;
     }
-    img{
+    .imagescard{
         border-radius: 10%;
         width: 200px;
         height: 200px;
@@ -652,6 +655,11 @@ h2{
     #icon{
         width: 22px;
         height: 22px;
+    }
+    .footerName:after{
+        position: absolute;
+        margin-top: -51px;
+        margin-left: -0px;
     }
 }
 @media(min-width:481px) and (max-width:800px){
