--- a/styles.css
+++ b/styles.css
@@ -284,11 +284,13 @@ h2{
     --primary-color: #fdfdfd;
     --secondary-color: #212121;
     --tetiary-color: #ffffff89;
+    --grey-color: #505050;
 }
 .dark-theme{
     --primary-color: #050505;
     --secondary-color: #ffffff;
     --tetiary-color: #393838f6;
+    --grey-color: #dfdfdf;
 }
 
 @media(max-width:480px){
@@ -319,7 +321,7 @@ h2{
     .profile-image{
         display: block;
         border-radius: 40px;
-        padding: 10px;
+        
         height: 550px;
         margin: 0 auto;
     }
@@ -415,7 +417,7 @@ h2{
         display: flex;
         gap: 30px;
         justify-content: center;
-        margin-right: 60px;
+        margin-right: 50px;
     }
     .footerName{
         font-weight: 600;
@@ -425,9 +427,8 @@ h2{
     .footerName:after{
         content:'Abdul S' ;
         visibility: visible;
-        position: absolute;
         margin-top: -49px;
-        margin-left: -0px;
+        margin-left: auto;
     }
     .footNav a{
         font-size: 14px;
@@ -508,9 +509,6 @@ h2{
         border-radius: 40px;
         padding: 10px 0;
         
-    }
-    .exploreImage{
-      
     }
     .exploreRight{
        width: 60%;
@@ -609,8 +607,10 @@ h2{
     padding: 0 17%;
 }
 .card:hover{
-    margin-top: -10px;
+   margin-top: -10px;
 }
+
+
 @media(max-width:480px){
     .projectHeading{
         display: block;
@@ -641,7 +641,7 @@ h2{
         grid-template-rows: 1fr 1fr;
         gap: 7px;
         margin-top: 60px;
-        margin-left: -55px;
+        margin-left: -65px;
 
     }
     .card{
@@ -708,4 +708,404 @@ h2{
         width: 22px;
         height: 22px;
     }
+}
+
+/*first project*/
+
+.researchDesignMain{
+    width: 80%;
+    text-align: center;
+    margin: auto;
+    height: 100vh;
+    margin-top: 70px;
+    color: var(--secondary-color);
+}
+.timeLineTable{
+    text-align: left;
+    width: 50% ;
+    margin: 40px auto;
+    font-size: 12px;
+    border-spacing: 0px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: bold;
+    color: #555555a4;
+    line-height: 17px;
+   border-spacing: 5px;
+}
+.tableHeading{
+font-size: 9px;
+}
+.timelineData{
+    margin-top: -20px;
+}
+.smallHeadingResearch{
+    font-size: 15px;
+    margin-bottom: 10px;
+}
+.researchHeading{
+    font-size: 2.8rem;
+    font-weight: 600;
+    width: 70%;
+    margin: auto;
+    margin-bottom: 50px;
+}
+
+.twentyFour{
+    color: rgb(234, 127, 4);
+}
+.timeLine{
+    margin-bottom: 70px;
+}
+.introductionArea{
+    width: 65%;
+    margin: auto;
+    line-height: 30px;
+    color: var(--grey-color);
+    margin-bottom: 60px;
+}
+.intoHeading{
+    font-weight: 400;
+    font-size: 12px;
+}
+.problemStatement{
+    width: 65%;
+    display: flex;
+    justify-content: space-evenly;
+    gap: 70px;
+    line-height: 30px;
+    color: var(--secondary-color);
+    margin: auto;
+    margin-bottom: 100px;
+}
+.statementHeading{
+    font-size: 25px;
+    width: 300px;
+    margin-top: 100px;
+}
+.statementParagraph{
+    width: 500px;
+    
+}
+.empathyMap{
+    width: 65%;
+    margin: auto;
+    display: flex;
+    justify-content: space-between;
+    color: var(--secondary-color);
+}
+.empathyHeading{
+    width: 400px;
+    margin-top: 150px;
+}
+.empathyHead{
+    font-size: 25px;
+}
+.empathyParagraph{
+line-height: 30px;
+}
+.empathyCards{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+    gap: 30px;
+}
+.emojis{
+    text-align: center;
+    font-size: 20px;
+    font-weight: 600;
+    margin-bottom: 20px;
+}
+.painPointArea{
+    margin-top: 100px;
+    color: var(--secondary-color);
+}
+.painpointHeading{
+    font-weight: 400;
+    font-size: 12px; 
+    color: var(--grey-color);
+    margin-left: 385px;
+    margin-bottom: 40px;
+}
+.painPoints{
+    width: 50%;
+    margin: auto;
+    display: grid;
+    grid-template-columns: 250px 250px 250px;
+    grid-template-rows: 1fr 1fr;
+    gap: 30px;
+    color: var(--secondary-color); 
+    margin-bottom: 100px;
+}
+.painPoint{
+    font-size: 20px;
+    font-weight: 600;
+    width: 250px;
+    text-align: left;
+    margin: 0 auto;
+}
+.dataCollectionArea{
+    width: 65%;
+    display: flex;
+    justify-content: space-evenly;
+    gap: 70px;
+    line-height: 30px;
+    color: var(--secondary-color);
+    margin: auto;
+    margin-bottom: 100px;
+}
+.dataHeading{
+    font-size: 25px;
+    font-weight: 600;
+    width: 250px;
+    margin-top: 60px;
+}
+.dataParagraph{
+    width: 500px;
+}
+.lastDataParagragh{
+    width: 58%;
+    margin: auto;
+    text-align: justify;
+    margin-bottom: 150px;
+    line-height: 30px;
+}
+.userStory{
+    width: 80%;
+    display: flex;
+    justify-content: space-around;
+    gap: 10px;
+    margin: auto;
+    margin-bottom: 150px;
+}
+.designProcessArea{
+    width: 80%;
+    margin: auto;
+    color: var(--secondary-color);
+    line-height: 30px;
+    margin-bottom: 60px;
+}
+.designHeading{
+    width: 400px;
+    margin: auto;
+    text-align: center;
+}
+.desighh4{
+    font-size: 25px;
+    font-weight: 500;
+    margin-bottom: 10px;
+}
+.designParag{
+    margin-bottom: 40px;
+    font-size: 15px;
+}
+.designGridArea{
+    display: grid;
+    grid-template-columns: 300px 300px;
+    grid-template-rows: 1fr 1fr;
+    gap: 40px;
+    width: 50%;
+    margin: auto;
+    margin-bottom: 50px;
+    text-align: left;
+    font-size: 16px;
+}
+.dataDrawings{
+    width: 50% ;
+    margin: auto;
+}
+.phoneImage{
+    width: 50%;
+    margin: auto;
+    margin-bottom: 100px;
+}
+.device{
+    width: 700px;
+    margin: auto;
+}
+
+@media(max-width:480px){
+    .researchDesignMain{
+        display: block;
+        width: 100%;
+        text-align: center;
+        margin: auto;
+        margin-top: 10%;
+        margin-bottom: 30px ;
+        height: auto;
+    }
+    .timeLineTable{
+        text-align: center;
+        display: block;
+        width: 80% ;
+        margin: 40px auto;
+        font-size: 12px;
+    }
+    .carwithflash{
+        width: 350px;
+    }
+    .introductionArea{
+        display: block;
+        text-align: justify;
+        width: 80%;
+        margin: auto;
+    }
+    .problemStatement{
+        width: 80%;
+        display: block;
+        justify-content: space-evenly;
+        gap: 70px;
+        line-height: 30px;
+        color: var(--secondary-color);
+        margin: auto;
+
+    }
+    .statementHeading{
+        font-size: 20px;
+        text-align: center;
+        width: 250px;
+       margin: 70px auto;
+       margin-bottom: 10px;
+    }
+    .statementParagraph{
+       width: 350px; 
+        text-align: justify;
+    }
+    .empathyMap{
+        display: block;
+        width: 90%;
+        margin: auto;
+       text-align: center;
+        
+    }
+    .empathyHead{
+        font-size: 20px;
+        width: 300px;
+        margin: auto;
+    }
+    .empathyParagraph{
+        width: 350px;
+        margin: auto;
+        text-align: justify;
+    }
+    .empathyCards{
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows:1fr 1fr ;
+        gap: 20px;
+        margin-top: 30px;
+    
+    }
+    .cardss{
+        width: 150px;
+        height: 150px;
+    }
+    .painPointArea{
+        display: block ;
+        width: 100%;
+        text-align: center;
+    }
+    .painpointHeading{
+        font-weight: 500;
+        font-size: 15px; 
+        display: block;
+        width: 300px;
+        margin: auto;
+        margin-bottom: 13px;
+    }
+    .painPoints{
+        width: 100%;
+        margin: auto;
+        display: flex;
+        flex-direction: column-reverse;
+        gap: 30px;
+        color: var(--secondary-color); 
+        margin-bottom: 100px;
+    }
+    .painPoint{
+        font-size: 20px;
+        font-weight: 600;
+        width: 250px;
+        text-align: left;
+        margin: 0 auto;
+    }
+    .dataCollectionArea{
+        width: 80%;
+        display: flex;
+        flex-direction: column;
+        
+        margin-bottom: 100px;
+    }
+    .dataHeading{
+        font-size: 25px;
+        font-weight: 600;
+        width: 250px;
+        margin-top: -20px;
+        text-align: center;
+        margin: auto;
+    }
+    .dataParagraph{
+        width: 350px;
+        text-align: justify;
+        margin-top: -50px;
+    }
+    .lastDataParagragh{
+        width: 80%;
+        margin: auto;
+        text-align: justify;
+        margin-bottom: 150px;
+    }
+    .userStory{
+        width: 85%;
+        display: flex;
+        flex-direction: column;
+        gap: 10px;
+        margin: auto;
+        margin-bottom: 100px;
+    }
+    .designProcessArea{
+        width: 80%;
+        margin: auto;
+        text-align: justify;
+    }
+    .designHeading{
+        width: 350px;
+        margin: auto;
+        text-align: center;
+    }
+    .desighh4{
+        font-size: 30px;
+    }
+    .designParag{
+        margin-bottom: 40px;
+        font-size: 15px;
+    }
+    .designGridArea{
+        display: flex;
+        flex-direction: column;
+        gap: 30px;
+        width: 80%;
+        margin: auto;
+        margin-bottom: 50px;
+        text-align: justify;
+        font-size: 16px;
+    }
+    .dataDrawings{
+       display: block;
+       width: 100%;
+       margin: auto;
+    }
+    .pencilDrawings{
+        display: block;
+        width: 300px;
+        margin: auto;
+    }
+    .phoneImage{
+        width: 70%;
+        margin: auto;
+       
+    }
+    .device{
+        width: 300px;
+    }
+    
 }
