--- a/styles.css
+++ b/styles.css
@@ -935,7 +935,7 @@ line-height: 30px;
     margin-top: 40px;
     margin-left: 260px;
 }
-.fourthButton{
+.fourthButton:hover{
     margin-top: -2px;
 }
 @media(max-width:480px){
